server/compilers/goLiteJS/src/test/ml1/invalid/decl24.go
// missing left parenthesis in distributed declaration
package main

var
    x1, x2 int
    y1, y2 = 3, 4
    z1, z2 int = 1,2
)
